// Bun Snapshot v1, https://bun.sh/docs/test/snapshots
// W31: 10 complete bodies reviewed in W31e-bun-alignment.json.

exports[`RadioGroup should RadioGroup snapshot 1`] = `
"<div>
  <div class=" OLdisplay-vflex-o0 OHbt4ff86e1708e2w1 OLgap-v30px" style="---SUHb9m9gl92zlma2q3w-anm: row;">
    <label class="OHap5djyt4pz8v8ipo OHcv8oijaub8u8k_sq OLcursor-vpointer OHdio9bnbqyifb6hrv OLgap-v8px">
      <input data-radio-input="true" class=" OHa15ddff3l6p5r005 OHdqxr3r3a571rumus OHacasu6n4nauo9trf OHa5gm0n0vmxrvwm4y OHcmajz0lni5s_4_iq OHa84c35_ggysz3lqi OLheight-v18px-o1 OLmargin-v0-o1 OHcobyc2shp1dl3rm6 OHa6krmbqx57cjp74n OHa_57t0rus0nsl_e9 OHbyeikfi6izlhssk_ OHc6dv5g3qdv7_h90s OHbm00xvb7fip1bkec OHaptje1ut_j5cpc2x OHbit1l9c3o9skcpwd OLwidth-v18px-o1" type="radio">
      <span class=" OHci357ly0ikc7j0rp OHb8mcee2m48gummvt">
        옵션 1
      </span>
    </label>
    <label class="OHap5djyt4pz8v8ipo OHcv8oijaub8u8k_sq OLcursor-vpointer OHdio9bnbqyifb6hrv OLgap-v8px">
      <input data-radio-input="true" class=" OHa15ddff3l6p5r005 OHdqxr3r3a571rumus OHacasu6n4nauo9trf OHa5gm0n0vmxrvwm4y OHcmajz0lni5s_4_iq OHa84c35_ggysz3lqi OLheight-v18px-o1 OLmargin-v0-o1 OHcobyc2shp1dl3rm6 OHa6krmbqx57cjp74n OHa_57t0rus0nsl_e9 OHbyeikfi6izlhssk_ OHc6dv5g3qdv7_h90s OHbm00xvb7fip1bkec OHaptje1ut_j5cpc2x OHbit1l9c3o9skcpwd OLwidth-v18px-o1" type="radio">
      <span class=" OHci357ly0ikc7j0rp OHb8mcee2m48gummvt">
        옵션 2
      </span>
    </label>
  </div>
</div>"
`;

exports[`RadioGroup should RadioGroup snapshot 2`] = `
"<div>
  <div class=" OLdisplay-vflex-o0 OHbt4ff86e1708e2w1 OLgap-v16px" style="---SUHb9m9gl92zlma2q3w-anm: column;">
    <label class="OHap5djyt4pz8v8ipo OHcv8oijaub8u8k_sq OLcursor-vpointer OHdio9bnbqyifb6hrv OLgap-v8px">
      <input data-radio-input="true" class=" OHa15ddff3l6p5r005 OHdqxr3r3a571rumus OHacasu6n4nauo9trf OHa5gm0n0vmxrvwm4y OHcmajz0lni5s_4_iq OHa84c35_ggysz3lqi OLheight-v18px-o1 OLmargin-v0-o1 OHcobyc2shp1dl3rm6 OHa6krmbqx57cjp74n OHa_57t0rus0nsl_e9 OHbyeikfi6izlhssk_ OHc6dv5g3qdv7_h90s OHbm00xvb7fip1bkec OHaptje1ut_j5cpc2x OHbit1l9c3o9skcpwd OLwidth-v18px-o1" type="radio">
      <span class=" OHci357ly0ikc7j0rp OHb8mcee2m48gummvt">
        옵션 1
      </span>
    </label>
    <label class="OHap5djyt4pz8v8ipo OHcv8oijaub8u8k_sq OLcursor-vpointer OHdio9bnbqyifb6hrv OLgap-v8px">
      <input data-radio-input="true" class=" OHa15ddff3l6p5r005 OHdqxr3r3a571rumus OHacasu6n4nauo9trf OHa5gm0n0vmxrvwm4y OHcmajz0lni5s_4_iq OHa84c35_ggysz3lqi OLheight-v18px-o1 OLmargin-v0-o1 OHcobyc2shp1dl3rm6 OHa6krmbqx57cjp74n OHa_57t0rus0nsl_e9 OHbyeikfi6izlhssk_ OHc6dv5g3qdv7_h90s OHbm00xvb7fip1bkec OHaptje1ut_j5cpc2x OHbit1l9c3o9skcpwd OLwidth-v18px-o1" type="radio">
      <span class=" OHci357ly0ikc7j0rp OHb8mcee2m48gummvt">
        옵션 2
      </span>
    </label>
  </div>
</div>"
`;

exports[`RadioGroup should RadioGroup snapshot 3`] = `
"<div>
  <div class=" OLdisplay-vflex-o0 OHbt4ff86e1708e2w1 OLgap-v30px" style="---SUHb9m9gl92zlma2q3w-anm: row;">
    <label aria-disabled="true" class="OHap5djyt4pz8v8ipo OHcv8oijaub8u8k_sq OLcursor-vpointer OHdio9bnbqyifb6hrv OLgap-v8px">
      <input data-radio-input="true" disabled="" class=" OHa15ddff3l6p5r005 OHdqxr3r3a571rumus OHacasu6n4nauo9trf OHa5gm0n0vmxrvwm4y OHcmajz0lni5s_4_iq OHa84c35_ggysz3lqi OLheight-v18px-o1 OLmargin-v0-o1 OHcobyc2shp1dl3rm6 OHa6krmbqx57cjp74n OHa_57t0rus0nsl_e9 OHbyeikfi6izlhssk_ OHc6dv5g3qdv7_h90s OHbm00xvb7fip1bkec OHaptje1ut_j5cpc2x OHbit1l9c3o9skcpwd OLwidth-v18px-o1" type="radio">
      <span aria-disabled="true" class=" OHci357ly0ikc7j0rp OHb8mcee2m48gummvt">
        옵션 1
      </span>
    </label>
    <label aria-disabled="true" class="OHap5djyt4pz8v8ipo OHcv8oijaub8u8k_sq OLcursor-vpointer OHdio9bnbqyifb6hrv OLgap-v8px">
      <input data-radio-input="true" disabled="" class=" OHa15ddff3l6p5r005 OHdqxr3r3a571rumus OHacasu6n4nauo9trf OHa5gm0n0vmxrvwm4y OHcmajz0lni5s_4_iq OHa84c35_ggysz3lqi OLheight-v18px-o1 OLmargin-v0-o1 OHcobyc2shp1dl3rm6 OHa6krmbqx57cjp74n OHa_57t0rus0nsl_e9 OHbyeikfi6izlhssk_ OHc6dv5g3qdv7_h90s OHbm00xvb7fip1bkec OHaptje1ut_j5cpc2x OHbit1l9c3o9skcpwd OLwidth-v18px-o1" type="radio">
      <span aria-disabled="true" class=" OHci357ly0ikc7j0rp OHb8mcee2m48gummvt">
        옵션 2
      </span>
    </label>
  </div>
</div>"
`;

exports[`RadioGroup should RadioGroup snapshot 4`] = `
"<div>
  <div class=" OLdisplay-vflex-o0 OHbt4ff86e1708e2w1 OLgap-v16px" style="---SUHb9m9gl92zlma2q3w-anm: column;">
    <label aria-disabled="true" class="OHap5djyt4pz8v8ipo OHcv8oijaub8u8k_sq OLcursor-vpointer OHdio9bnbqyifb6hrv OLgap-v8px">
      <input data-radio-input="true" disabled="" class=" OHa15ddff3l6p5r005 OHdqxr3r3a571rumus OHacasu6n4nauo9trf OHa5gm0n0vmxrvwm4y OHcmajz0lni5s_4_iq OHa84c35_ggysz3lqi OLheight-v18px-o1 OLmargin-v0-o1 OHcobyc2shp1dl3rm6 OHa6krmbqx57cjp74n OHa_57t0rus0nsl_e9 OHbyeikfi6izlhssk_ OHc6dv5g3qdv7_h90s OHbm00xvb7fip1bkec OHaptje1ut_j5cpc2x OHbit1l9c3o9skcpwd OLwidth-v18px-o1" type="radio">
      <span aria-disabled="true" class=" OHci357ly0ikc7j0rp OHb8mcee2m48gummvt">
        옵션 1
      </span>
    </label>
    <label aria-disabled="true" class="OHap5djyt4pz8v8ipo OHcv8oijaub8u8k_sq OLcursor-vpointer OHdio9bnbqyifb6hrv OLgap-v8px">
      <input data-radio-input="true" disabled="" class=" OHa15ddff3l6p5r005 OHdqxr3r3a571rumus OHacasu6n4nauo9trf OHa5gm0n0vmxrvwm4y OHcmajz0lni5s_4_iq OHa84c35_ggysz3lqi OLheight-v18px-o1 OLmargin-v0-o1 OHcobyc2shp1dl3rm6 OHa6krmbqx57cjp74n OHa_57t0rus0nsl_e9 OHbyeikfi6izlhssk_ OHc6dv5g3qdv7_h90s OHbm00xvb7fip1bkec OHaptje1ut_j5cpc2x OHbit1l9c3o9skcpwd OLwidth-v18px-o1" type="radio">
      <span aria-disabled="true" class=" OHci357ly0ikc7j0rp OHb8mcee2m48gummvt">
        옵션 2
      </span>
    </label>
  </div>
</div>"
`;

exports[`RadioGroup should RadioGroup snapshot 5`] = `
"<div>
  <div class=" OLdisplay-vflex-o0 OHdngjbzkxqcmch9hu OLgap-v0">
    <label class="OHap5djyt4pz8v8ipo    ">
      <input data-radio-input="true" class=" OLdisplay-vnone-o1 OLopacity-v0-o1" type="radio">
      <div data-radio-button="true" class=" OHcosn1mcn9e5l833s OHbjt9_sa24d0mw2b8 OHa5gm0n0vmxrvwm4y OHcmajz0lni5s_4_iq OHci357ly0ikc7j0rp OHbn3vk_8bv59jbjl4 OLdisplay-vflex-o1 OHa4psiaufo1v7va_e OHdv5lvl82q4gggarp OHbmmuam2bsbq9s4jk OHap30l99pe_bkb38j OHbxkefzld71drfh1u OHat8hvcfbmttx5lei OHczpfu2ycoom_wjzw OHc8l4dyji78hfl6i1 OHaa8xy6fsfd46dbgj OHbn9c_mnvgiyjipn5 OHdgi6sn2ow95fssjw OHbvv5eh2rzgfhtmae OHdmtv16jgjyjdawef OHc2lvy5ta4o6nmpzp OHa2v65b8fmsywl7o3">
        옵션 1
      </div>
    </label>
    <label class="OHap5djyt4pz8v8ipo    ">
      <input data-radio-input="true" class=" OLdisplay-vnone-o1 OLopacity-v0-o1" type="radio">
      <div data-radio-button="true" class=" OHcosn1mcn9e5l833s OHbjt9_sa24d0mw2b8 OHa5gm0n0vmxrvwm4y OHcmajz0lni5s_4_iq OHci357ly0ikc7j0rp OHbn3vk_8bv59jbjl4 OLdisplay-vflex-o1 OHa4psiaufo1v7va_e OHdv5lvl82q4gggarp OHbmmuam2bsbq9s4jk OHap30l99pe_bkb38j OHbxkefzld71drfh1u OHat8hvcfbmttx5lei OHczpfu2ycoom_wjzw OHc8l4dyji78hfl6i1 OHaa8xy6fsfd46dbgj OHbn9c_mnvgiyjipn5 OHdgi6sn2ow95fssjw OHbvv5eh2rzgfhtmae OHdmtv16jgjyjdawef OHc2lvy5ta4o6nmpzp OHaz8c7_b8sr2o_nmo">
        옵션 2
      </div>
    </label>
  </div>
</div>"
`;

exports[`RadioGroup should RadioGroup snapshot 6`] = `
"<div>
  <div class=" OLdisplay-vflex-o0 OHdngjbzkxqcmch9hu OLgap-v0">
    <label aria-disabled="true" class="OHap5djyt4pz8v8ipo    ">
      <input data-radio-input="true" disabled="" class=" OLdisplay-vnone-o1 OLopacity-v0-o1" type="radio">
      <div aria-disabled="true" data-radio-button="true" class=" OHcosn1mcn9e5l833s OHbjt9_sa24d0mw2b8 OHa5gm0n0vmxrvwm4y OHcmajz0lni5s_4_iq OHci357ly0ikc7j0rp OHbn3vk_8bv59jbjl4 OLdisplay-vflex-o1 OHa4psiaufo1v7va_e OHdv5lvl82q4gggarp OHbmmuam2bsbq9s4jk OHap30l99pe_bkb38j OHbxkefzld71drfh1u OHat8hvcfbmttx5lei OHczpfu2ycoom_wjzw OHc8l4dyji78hfl6i1 OHaa8xy6fsfd46dbgj OHbn9c_mnvgiyjipn5 OHdgi6sn2ow95fssjw OHbvv5eh2rzgfhtmae OHdmtv16jgjyjdawef OHc2lvy5ta4o6nmpzp OHa2v65b8fmsywl7o3">
        옵션 1
      </div>
    </label>
    <label aria-disabled="true" class="OHap5djyt4pz8v8ipo    ">
      <input data-radio-input="true" disabled="" class=" OLdisplay-vnone-o1 OLopacity-v0-o1" type="radio">
      <div aria-disabled="true" data-radio-button="true" class=" OHcosn1mcn9e5l833s OHbjt9_sa24d0mw2b8 OHa5gm0n0vmxrvwm4y OHcmajz0lni5s_4_iq OHci357ly0ikc7j0rp OHbn3vk_8bv59jbjl4 OLdisplay-vflex-o1 OHa4psiaufo1v7va_e OHdv5lvl82q4gggarp OHbmmuam2bsbq9s4jk OHap30l99pe_bkb38j OHbxkefzld71drfh1u OHat8hvcfbmttx5lei OHczpfu2ycoom_wjzw OHc8l4dyji78hfl6i1 OHaa8xy6fsfd46dbgj OHbn9c_mnvgiyjipn5 OHdgi6sn2ow95fssjw OHbvv5eh2rzgfhtmae OHdmtv16jgjyjdawef OHc2lvy5ta4o6nmpzp OHaz8c7_b8sr2o_nmo">
        옵션 2
      </div>
    </label>
  </div>
</div>"
`;

exports[`RadioGroup should RadioGroup snapshot 7`] = `
"<div>
  <div class="className OLdisplay-vflex-o0 OHbt4ff86e1708e2w1 OLgap-v30px" style="---SUHb9m9gl92zlma2q3w-anm: row;">
    <label class="OHap5djyt4pz8v8ipo OHcv8oijaub8u8k_sq OLcursor-vpointer OHdio9bnbqyifb6hrv OLgap-v8px">
      <input data-radio-input="true" class=" OHa15ddff3l6p5r005 OHdqxr3r3a571rumus OHacasu6n4nauo9trf OHa5gm0n0vmxrvwm4y OHcmajz0lni5s_4_iq OHa84c35_ggysz3lqi OLheight-v18px-o1 OLmargin-v0-o1 OHcobyc2shp1dl3rm6 OHa6krmbqx57cjp74n OHa_57t0rus0nsl_e9 OHbyeikfi6izlhssk_ OHc6dv5g3qdv7_h90s OHbm00xvb7fip1bkec OHaptje1ut_j5cpc2x OHbit1l9c3o9skcpwd OLwidth-v18px-o1" type="radio">
      <span class="classNameLabel OHci357ly0ikc7j0rp OHb8mcee2m48gummvt">
        옵션 1
      </span>
    </label>
    <label class="OHap5djyt4pz8v8ipo OHcv8oijaub8u8k_sq OLcursor-vpointer OHdio9bnbqyifb6hrv OLgap-v8px">
      <input data-radio-input="true" class=" OHa15ddff3l6p5r005 OHdqxr3r3a571rumus OHacasu6n4nauo9trf OHa5gm0n0vmxrvwm4y OHcmajz0lni5s_4_iq OHa84c35_ggysz3lqi OLheight-v18px-o1 OLmargin-v0-o1 OHcobyc2shp1dl3rm6 OHa6krmbqx57cjp74n OHa_57t0rus0nsl_e9 OHbyeikfi6izlhssk_ OHc6dv5g3qdv7_h90s OHbm00xvb7fip1bkec OHaptje1ut_j5cpc2x OHbit1l9c3o9skcpwd OLwidth-v18px-o1" type="radio">
      <span class="classNameLabel OHci357ly0ikc7j0rp OHb8mcee2m48gummvt">
        옵션 2
      </span>
    </label>
  </div>
</div>"
`;

exports[`RadioGroup should RadioGroup snapshot 8`] = `
"<div>
  <div class=" OLdisplay-vflex-o0 OHbt4ff86e1708e2w1 OLgap-v30px" style="---SUHb9m9gl92zlma2q3w-anm: row; width: 500px;">
    <label class="OHap5djyt4pz8v8ipo OHcv8oijaub8u8k_sq OLcursor-vpointer OHdio9bnbqyifb6hrv OLgap-v8px">
      <input data-radio-input="true" class=" OHa15ddff3l6p5r005 OHdqxr3r3a571rumus OHacasu6n4nauo9trf OHa5gm0n0vmxrvwm4y OHcmajz0lni5s_4_iq OHa84c35_ggysz3lqi OLheight-v18px-o1 OLmargin-v0-o1 OHcobyc2shp1dl3rm6 OHa6krmbqx57cjp74n OHa_57t0rus0nsl_e9 OHbyeikfi6izlhssk_ OHc6dv5g3qdv7_h90s OHbm00xvb7fip1bkec OHaptje1ut_j5cpc2x OHbit1l9c3o9skcpwd OLwidth-v18px-o1" type="radio">
      <span class=" OHci357ly0ikc7j0rp OHb8mcee2m48gummvt">
        옵션 1
      </span>
    </label>
    <label class="OHap5djyt4pz8v8ipo OHcv8oijaub8u8k_sq OLcursor-vpointer OHdio9bnbqyifb6hrv OLgap-v8px">
      <input data-radio-input="true" class=" OHa15ddff3l6p5r005 OHdqxr3r3a571rumus OHacasu6n4nauo9trf OHa5gm0n0vmxrvwm4y OHcmajz0lni5s_4_iq OHa84c35_ggysz3lqi OLheight-v18px-o1 OLmargin-v0-o1 OHcobyc2shp1dl3rm6 OHa6krmbqx57cjp74n OHa_57t0rus0nsl_e9 OHbyeikfi6izlhssk_ OHc6dv5g3qdv7_h90s OHbm00xvb7fip1bkec OHaptje1ut_j5cpc2x OHbit1l9c3o9skcpwd OLwidth-v18px-o1" type="radio">
      <span class=" OHci357ly0ikc7j0rp OHb8mcee2m48gummvt">
        옵션 2
      </span>
    </label>
  </div>
</div>"
`;

exports[`RadioGroup should RadioGroup snapshot 9`] = `
"<div>
  <div class=" OLdisplay-vflex-o0 OHbt4ff86e1708e2w1 OLgap-v30px" style="---SUHb9m9gl92zlma2q3w-anm: row;">
    <label class="OHap5djyt4pz8v8ipo OHcv8oijaub8u8k_sq OLcursor-vpointer OHdio9bnbqyifb6hrv OLgap-v8px">
      <input data-radio-input="true" class=" OHa15ddff3l6p5r005 OHdqxr3r3a571rumus OHacasu6n4nauo9trf OHa5gm0n0vmxrvwm4y OHcmajz0lni5s_4_iq OHa84c35_ggysz3lqi OLheight-v18px-o1 OLmargin-v0-o1 OHcobyc2shp1dl3rm6 OHa6krmbqx57cjp74n OHa_57t0rus0nsl_e9 OHbyeikfi6izlhssk_ OHc6dv5g3qdv7_h90s OHbm00xvb7fip1bkec OHaptje1ut_j5cpc2x OHbit1l9c3o9skcpwd OLwidth-v18px-o1" style="--primary: red; --border: red; --text: red; --bg: red; --hoverBg: red; --hoverBorder: red; --hoverColor: red; --checkedBg: red; --checkedBorder: red; --checkedColor: red; --disabledBg: red; --disabledColor: red;" type="radio">
      <span class=" OHci357ly0ikc7j0rp OHb8mcee2m48gummvt" style="--primary: red; --border: red; --text: red; --bg: red; --hoverBg: red; --hoverBorder: red; --hoverColor: red; --checkedBg: red; --checkedBorder: red; --checkedColor: red; --disabledBg: red; --disabledColor: red;">
        옵션 1
      </span>
    </label>
    <label class="OHap5djyt4pz8v8ipo OHcv8oijaub8u8k_sq OLcursor-vpointer OHdio9bnbqyifb6hrv OLgap-v8px">
      <input data-radio-input="true" class=" OHa15ddff3l6p5r005 OHdqxr3r3a571rumus OHacasu6n4nauo9trf OHa5gm0n0vmxrvwm4y OHcmajz0lni5s_4_iq OHa84c35_ggysz3lqi OLheight-v18px-o1 OLmargin-v0-o1 OHcobyc2shp1dl3rm6 OHa6krmbqx57cjp74n OHa_57t0rus0nsl_e9 OHbyeikfi6izlhssk_ OHc6dv5g3qdv7_h90s OHbm00xvb7fip1bkec OHaptje1ut_j5cpc2x OHbit1l9c3o9skcpwd OLwidth-v18px-o1" style="--primary: red; --border: red; --text: red; --bg: red; --hoverBg: red; --hoverBorder: red; --hoverColor: red; --checkedBg: red; --checkedBorder: red; --checkedColor: red; --disabledBg: red; --disabledColor: red;" type="radio">
      <span class=" OHci357ly0ikc7j0rp OHb8mcee2m48gummvt" style="--primary: red; --border: red; --text: red; --bg: red; --hoverBg: red; --hoverBorder: red; --hoverColor: red; --checkedBg: red; --checkedBorder: red; --checkedColor: red; --disabledBg: red; --disabledColor: red;">
        옵션 2
      </span>
    </label>
  </div>
</div>"
`;

exports[`RadioGroup should RadioGroup snapshot 10`] = `
"<div>
  <div class=" OLdisplay-vflex-o0 OHdngjbzkxqcmch9hu OLgap-v0">
    <label class="OHap5djyt4pz8v8ipo    ">
      <input data-radio-input="true" class=" OLdisplay-vnone-o1 OLopacity-v0-o1" type="radio">
      <div data-radio-button="true" class=" OHcosn1mcn9e5l833s OHbjt9_sa24d0mw2b8 OHa5gm0n0vmxrvwm4y OHcmajz0lni5s_4_iq OHci357ly0ikc7j0rp OHbn3vk_8bv59jbjl4 OLdisplay-vflex-o1 OHa4psiaufo1v7va_e OHdv5lvl82q4gggarp OHbmmuam2bsbq9s4jk OHap30l99pe_bkb38j OHbxkefzld71drfh1u OHat8hvcfbmttx5lei OHczpfu2ycoom_wjzw OHc8l4dyji78hfl6i1 OHaa8xy6fsfd46dbgj OHbn9c_mnvgiyjipn5 OHdgi6sn2ow95fssjw OHbvv5eh2rzgfhtmae OHdmtv16jgjyjdawef OHc2lvy5ta4o6nmpzp OHa2v65b8fmsywl7o3" style="--primary: red; --border: red; --text: red; --bg: red; --hoverBg: red; --hoverBorder: red; --hoverColor: red; --checkedBg: red; --checkedBorder: red; --checkedColor: red; --disabledBg: red; --disabledColor: red;">
        옵션 1
      </div>
    </label>
    <label class="OHap5djyt4pz8v8ipo    ">
      <input data-radio-input="true" class=" OLdisplay-vnone-o1 OLopacity-v0-o1" type="radio">
      <div data-radio-button="true" class=" OHcosn1mcn9e5l833s OHbjt9_sa24d0mw2b8 OHa5gm0n0vmxrvwm4y OHcmajz0lni5s_4_iq OHci357ly0ikc7j0rp OHbn3vk_8bv59jbjl4 OLdisplay-vflex-o1 OHa4psiaufo1v7va_e OHdv5lvl82q4gggarp OHbmmuam2bsbq9s4jk OHap30l99pe_bkb38j OHbxkefzld71drfh1u OHat8hvcfbmttx5lei OHczpfu2ycoom_wjzw OHc8l4dyji78hfl6i1 OHaa8xy6fsfd46dbgj OHbn9c_mnvgiyjipn5 OHdgi6sn2ow95fssjw OHbvv5eh2rzgfhtmae OHdmtv16jgjyjdawef OHc2lvy5ta4o6nmpzp OHaz8c7_b8sr2o_nmo" style="--primary: red; --border: red; --text: red; --bg: red; --hoverBg: red; --hoverBorder: red; --hoverColor: red; --checkedBg: red; --checkedBorder: red; --checkedColor: red; --disabledBg: red; --disabledColor: red;">
        옵션 2
      </div>
    </label>
  </div>
</div>"
`;
